tests/fails/invalid-default-1.stderr
error: expected string literal
 --> $DIR/invalid-default-1.rs:4:21
  |
4 | #[blanket(default = 1)]
  |                     ^
